--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "red-blood",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@headlessui/react": "^2.2.0",
-    "@heroicons/react": "^2.2.0",
-    "@tailwindcss/vite": "^4.0.6",
-    "axios": "^1.7.9",
-    "chart.js": "^4.4.7",
-    "chartjs": "^0.3.24",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.6"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.19.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.18",
-    "globals": "^15.14.0",
-    "sass-embedded": "^1.85.0",
-    "vite": "^6.1.0"
-  }
+	"name": "client",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview",
+		"host": "vite --host"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.7.14",
+		"@heroicons/react": "^2.0.17",
+		"axios": "^1.3.6",
+		"chart.js": "^4.3.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-icons": "^4.9.0",
+		"react-router": "^6.11.1",
+		"react-router-dom": "^6.11.1",
+		"scss": "^0.2.4"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.28",
+		"@types/react-dom": "^18.0.11",
+		"@vitejs/plugin-react": "^4.0.0",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.38.0",
+		"eslint-plugin-react": "^7.32.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.3.4",
+		"postcss": "^8.4.23",
+		"sass": "^1.62.1",
+		"tailwindcss": "^3.3.2",
+		"vite": "^4.3.2"
+	}
 }
